# goose

./: .gitignore  404.html  AGENTS.md  CUSTOM_DISTROS.md  Cargo.toml  Justfile  README.md  build-cli.sh  build-goose2.sh  index.html  sitemap.xml  skills-manifest.json
.agents/skills/code-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-cli.yml  bundle-desktop-intel.yml  bundle-desktop-windows.yml  bundle-desktop.yml  bundle-goose2-manual.yml  bundle-goose2.yml  canary.yml  cargo-deny.yml  ci.yml  docs-update-cli-ref.yml  goose-release-notes.yml  goose2-ci.yml  pr-comment-build-cli.yml  pr-smoke-test.yml  publish-npm.yml  release-goose2.yml  release.yml  test-windows-signing-caller.yml  test-windows-signing.yml
.husky/: pre-commit  pre-push
assets/js/: 0058b4c6.5872a41d.js  0a45c249.c2e3ddf8.js  18ffe98c.3d6837c2.js  311e6b66.2b836ff1.js  40011a75.57101d40.js  6f1aee1a.924c09c7.js  7dd3b2a7.d5f70708.js  814f3328.a3a232da.js  8ea09047.a0eba6a1.js  c15d9823.7a1349be.js  ef8b811a.ee6565ad.js  f81c1134.52b2905c.js  main.ac7ffcf0.js  runtime~main.84700dc4.js
blog/: atom.xml  index.html  rss.xml
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/authors/adewale/: index.html
blog/authors/aharvard/: index.html
blog/authors/alex/: index.html
blog/authors/alexhancock/: index.html
blog/authors/alice/: index.html
blog/authors/amanda/: index.html
blog/authors/angie/: index.html
blog/authors/clinton/: index.html
blog/authors/codefromthecrypt/: index.html
blog/authors/dalton/: index.html
blog/authors/damien/: index.html
blog/authors/dean/: index.html
blog/authors/debbie/: index.html
blog/authors/ebony/: index.html
blog/authors/glenn/: index.html
blog/authors/harrison/: index.html
blog/authors/ian/: index.html
blog/authors/jeuston/: index.html
blog/authors/matt/: index.html
blog/authors/mic/: index.html
blog/authors/rarora/: index.html
community/: index.html
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json  config.schema.json
crates/goose-acp/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-acp-macros/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-mcp/: Cargo.toml
crates/goose-sdk/: Cargo.toml
crates/goose-sdk/src/: custom_requests.rs
crates/goose-server/: Cargo.toml
crates/goose-test/: Cargo.toml
crates/goose-test-support/: Cargo.toml
deeplink-generator/: index.html
docs/experimental/: index.html
docs/goose-architecture/: index.html
docs/quickstart/: index.html
docs/troubleshooting/: index.html
documentation/: package-lock.json
documentation/static/: servers.json
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
grants/: index.html
markdown-page/: index.html
pr-preview/pr-8604/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-8656/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-8750/: 404.html  index.html  sitemap.xml  skills-manifest.json
prompt-library/: index.html
prompt-library/detail/: index.html
prompt-library/types/: index.html
recipe-generator/: index.html
recipes/: index.html
recipes/detail/: index.html
recipes/types/: index.html
skills/: index.html
skills/detail/: index.html
skills/types/: index.html
ui/: pnpm-lock.yaml  pnpm-workspace.yaml
ui/acp/: package.json
ui/desktop/: openapi.json  package.json
ui/goose-binary/: README.md
ui/goose2/: .gitignore  AGENTS.md  CODEOWNERS  GOVERNANCE.md  LICENSE  README.md  biome.json  ghost.config.ts  index.html  justfile  lefthook.yml  package.json  pnpm-lock.yaml  vite.config.ts  vitest.app-e2e.config.ts  vitest.config.ts
ui/goose2-web/: biome.json  components.json  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/goose2/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
ui/goose2/src-tauri/capabilities/: default.json
ui/goose2/src-tauri/icons/: icon.icns
ui/goose2/src-tauri/plugins/app-test-driver/: Cargo.toml  build.rs
ui/goose2/src-tauri/plugins/app-test-driver/permissions/: default.toml
ui/goose2/src-tauri/plugins/app-test-driver/permissions/autogenerated/: reference.md
ui/goose2/src-tauri/plugins/app-test-driver/permissions/autogenerated/commands/: driver_result.toml
ui/goose2/src-tauri/plugins/app-test-driver/permissions/schemas/: schema.json
ui/goose2/src-tauri/plugins/app-test-driver/src/: lib.rs
ui/goose2/src-tauri/src/: lib.rs  main.rs
ui/goose2/src-tauri/src/commands/: acp.rs  agent_setup.rs  agents.rs  chat.rs  credentials.rs  doctor.rs  extensions.rs  git.rs  git_changes.rs  mod.rs  model_setup.rs  projects.rs  sessions.rs  sidecar.rs  skills.rs  system.rs  ui_state.rs
ui/goose2/src-tauri/src/services/: acp.rs  goose_config.rs  goose_paths.rs  mod.rs  personas.rs  provider_defs.rs  sessions.rs
ui/goose2/src-tauri/src/services/acp/: goose_serve.rs  manager.rs  mod.rs  payloads.rs  registry.rs  search.rs  writer.rs
ui/goose2/src-tauri/src/services/acp/manager/: command_dispatch.rs  dispatcher.rs  dispatcher_tests.rs  session_ops.rs  thread.rs
ui/goose2/src-tauri/src/services/acp/manager/session_ops/: prompt_ops.rs  tests.rs
ui/goose2/src-tauri/src/types/: agents.rs  builtin_personas.rs  messages.rs  mod.rs
ui/scripts/: local-publish.sh  publish.sh
ui/sdk/: README.md  generate-schema.ts  package.json
ui/text/: package.json  server-binary.json
(+3565 files in other folders)
